--- a/cloudformation/infra.yaml
+++ b/cloudformation/infra.yaml
@@ -12,7 +12,7 @@ Resources:
   S3ArtifactsBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub bdp-artifacts-${AWS::AccountId}-${AWS::Region}
+      BucketName: bdp-artifacts-sylvester-eu-west-2
       VersioningConfiguration:
         Status: Enabled
       PublicAccessBlockConfiguration:
@@ -21,10 +21,10 @@ Resources:
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
 
-  S3BronzeBucket:
+  S3DatalakeBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub bdp-datalake-bronze-${AWS::AccountId}-${AWS::Region}
+      BucketName: bdp-datalake-sylvester-eu-west-2
       VersioningConfiguration:
         Status: Enabled
       PublicAccessBlockConfiguration:
@@ -38,22 +38,10 @@ Resources:
             Prefix: archive/
             ExpirationInDays: 365
 
-  S3SilverBucket:
+  S3RawSourceBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub bdp-datalake-silver-${AWS::AccountId}-${AWS::Region}
-      VersioningConfiguration:
-        Status: Enabled
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
-
-  S3GoldBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: !Sub bdp-datalake-gold-${AWS::AccountId}-${AWS::Region}
+      BucketName: bdp-raw-source-sylvester-eu-west-2
       VersioningConfiguration:
         Status: Enabled
       PublicAccessBlockConfiguration:
@@ -85,9 +73,8 @@ Resources:
                   - s3:DeleteObject
                   - s3:ListBucket
                 Resource:
-                  - !Sub arn:aws:s3:::bdp-datalake-bronze-${AWS::AccountId}-${AWS::Region}/*
-                  - !Sub arn:aws:s3:::bdp-datalake-silver-${AWS::AccountId}-${AWS::Region}/*
-                  - !Sub arn:aws:s3:::bdp-datalake-gold-${AWS::AccountId}-${AWS::Region}/*
+                  - arn:aws:s3:::bdp-datalake-sylvester-eu-west-2
+                  - arn:aws:s3:::bdp-datalake-sylvester-eu-west-2/*
 
   GlueDatabase:
     Type: AWS::Glue::Database
@@ -103,7 +90,7 @@ Resources:
       Role: !Ref GlueServiceRoleName
       Command:
         Name: glueetl
-        ScriptLocation: !Sub "s3://bdp-artifacts-${AWS::AccountId}-${AWS::Region}/glue/bronze_to_silver.py"
+        ScriptLocation: s3://bdp-artifacts-sylvester-eu-west-2/glue/bronze_to_silver.py
         PythonVersion: "3"
       GlueVersion: "3.0"
       NumberOfWorkers: 2
@@ -112,6 +99,8 @@ Resources:
         --job-language: python
         --enable-continuous-cloudwatch-log: true
         --enable-metrics: true
+        --BRONZE_BUCKET: bdp-datalake-sylvester-eu-west-2
+        --SILVER_BUCKET: bdp-datalake-sylvester-eu-west-2
 
   GlueJobSilverToGold:
     Type: AWS::Glue::Job
@@ -120,7 +109,7 @@ Resources:
       Role: !Ref GlueServiceRoleName
       Command:
         Name: glueetl
-        ScriptLocation: !Sub "s3://bdp-artifacts-${AWS::AccountId}-${AWS::Region}/glue/silver_to_gold.py"
+        ScriptLocation: s3://bdp-artifacts-sylvester-eu-west-2/glue/silver_to_gold.py
         PythonVersion: "3"
       GlueVersion: "3.0"
       NumberOfWorkers: 2
@@ -129,6 +118,8 @@ Resources:
         --job-language: python
         --enable-continuous-cloudwatch-log: true
         --enable-metrics: true
+        --SILVER_BUCKET: bdp-datalake-sylvester-eu-west-2
+        --GOLD_BUCKET: bdp-datalake-sylvester-eu-west-2
 
   LambdaExecutionRole:
     Type: AWS::IAM::Role
@@ -164,30 +155,30 @@ Resources:
       Runtime: python3.8
       Handler: ingestion.lambda_handler
       Code:
-        S3Bucket: !Ref S3ArtifactsBucket
+        S3Bucket: bdp-artifacts-sylvester-eu-west-2
         S3Key: lambda/ingestion.zip
       Timeout: 60
       Environment:
         Variables:
-          BRONZE_BUCKET: !Ref S3BronzeBucket
+          BRONZE_PREFIX: bronze/
+          SILVER_PREFIX: silver/
+          GOLD_PREFIX: gold/
+          DATALAKE_BUCKET: bdp-datalake-sylvester-eu-west-2
+          BRONZE_TO_SILVER_JOB: bronze_to_silver
 
 Outputs:
-  BronzeBucket:
-    Description: Bronze S3 bucket
-    Value: !Ref S3BronzeBucket
-
-  SilverBucket:
-    Description: Silver S3 bucket
-    Value: !Ref S3SilverBucket
-
-  GoldBucket:
-    Description: Gold S3 bucket
-    Value: !Ref S3GoldBucket
-
   ArtifactsBucket:
     Description: Artifacts S3 bucket
-    Value: !Ref S3ArtifactsBucket
+    Value: bdp-artifacts-sylvester-eu-west-2
+
+  DatalakeBucket:
+    Description: Data lake S3 bucket (contains bronze, silver, gold folders)
+    Value: bdp-datalake-sylvester-eu-west-2
+
+  RawSourceBucket:
+    Description: Raw source S3 bucket
+    Value: bdp-raw-source-sylvester-eu-west-2
 
   IngestionLambdaFunctionName:
     Description: Lambda function name for ingestion
-    Value: !Ref IngestionLambdaFunction
+    Value: ingestion_lambda
