--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,22 +11,22 @@ phases:
     runtime-versions:
       python: 3.8
     commands:
-      - echo Installing dependencies...
+      - echo "Installing dependencies..."
       - pip install --upgrade awscli boto3
 
   pre_build:
     commands:
-      - echo Packaging Lambda functions...
+      - echo "Packaging Lambda functions..."
       - cd lambda
-      - zip -r ../lambda/ingestion.zip ingestion.py
-      - zip -r ../lambda/trigger_silver_to_gold.zip trigger_silver_to_gold.py
+      - zip -r ingestion.zip ingestion.py
+      - zip -r trigger_silver_to_gold.zip trigger_silver_to_gold.py
       - cd ..
 
   build:
     commands:
       - echo "1) Deploy base infra (buckets, roles, glue database)..."
       - aws cloudformation deploy --template-file cloudformation/base-infra.yaml --stack-name $BASE_STACK_NAME --capabilities CAPABILITY_NAMED_IAM --region $AWS_REGION
-      - echo "2) Read outputs from base stack (ArtifactsBucket, DatalakeBucket, LambdaRoleArn, GlueRoleName)..."
+      - echo "2) Reading outputs from base stack..."
       - ARTIFACTS_BUCKET=$(aws cloudformation describe-stacks --stack-name $BASE_STACK_NAME --query "Stacks[0].Outputs[?OutputKey=='ArtifactsBucket'].OutputValue" --output text)
       - DATALAKE_BUCKET=$(aws cloudformation describe-stacks --stack-name $BASE_STACK_NAME --query "Stacks[0].Outputs[?OutputKey=='DatalakeBucket'].OutputValue" --output text)
       - LAMBDA_ROLE_ARN=$(aws cloudformation describe-stacks --stack-name $BASE_STACK_NAME --query "Stacks[0].Outputs[?OutputKey=='LambdaExecutionRoleArn'].OutputValue" --output text)
@@ -35,12 +35,12 @@ phases:
       - echo "Datalake bucket: $DATALAKE_BUCKET"
       - echo "Lambda role ARN: $LAMBDA_ROLE_ARN"
       - echo "Glue role name: $GLUE_ROLE_NAME"
-      - echo "3) Upload artifacts (Lambda zips, Glue scripts) to artifacts bucket..."
+      - echo "3) Uploading artifacts..."
       - aws s3 cp lambda/ingestion.zip s3://$ARTIFACTS_BUCKET/lambda/ingestion.zip
       - aws s3 cp lambda/trigger_silver_to_gold.zip s3://$ARTIFACTS_BUCKET/lambda/trigger_silver_to_gold.zip
       - aws s3 cp glue/bronze_to_silver.py s3://$ARTIFACTS_BUCKET/glue/bronze_to_silver.py
       - aws s3 cp glue/silver_to_gold.py s3://$ARTIFACTS_BUCKET/glue/silver_to_gold.py
-      - echo "4) Deploy app infra (Glue jobs, Lambdas, EventBridge) with artifacts uploaded..."
+      - echo "4) Deploying app infra..."
       - aws cloudformation deploy --template-file cloudformation/app-infra.yaml --stack-name $APP_STACK_NAME --capabilities CAPABILITY_NAMED_IAM --parameter-overrides ArtifactsBucketName=$ARTIFACTS_BUCKET DatalakeBucketName=$DATALAKE_BUCKET GlueServiceRoleName=$GLUE_ROLE_NAME LambdaExecutionRoleArn=$LAMBDA_ROLE_ARN --region $AWS_REGION
 
 artifacts:
