--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,8 +27,8 @@ phases:
       - echo Fetching AWS Account ID and Region dynamically...
       - export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
       - export AWS_REGION=$(aws configure get region || echo "eu-west-2")
-      - echo "Account ID: $AWS_ACCOUNT_ID"
-      - echo "Region: $AWS_REGION"
+#      - echo "Account ID: $AWS_ACCOUNT_ID"
+#      - echo "Region: $AWS_REGION"
 
       - set -e
       - echo Deploying base infra...
